# urlinks

./: .envrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  flake.nix  process-compose.yaml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.example  .pre-commit-config.yaml  Dockerfile.dev  pyproject.toml
backend/apps/core/: admin.py  authentication.py  urls.py
backend/apps/core/managers/: user.py
backend/apps/core/migrations/: 0001_initial.py  0002_usersession.py
backend/apps/core/models/: __init__.py  session.py  user.py
backend/apps/core/serializers/: __init__.py  session.py  user.py  version.py
backend/apps/core/tests/: test_sessions.py
backend/apps/core/utils/: __init__.py  request.py  session.py  turnstile.py
backend/apps/core/views/: __init__.py  health.py  session.py  user.py  version.py
backend/apps/profile_app/: admin.py  apps.py  urls.py
backend/apps/profile_app/migrations/: 0001_initial.py  0002_alter_link_icon_alter_page_banner_picture_and_more.py
backend/apps/profile_app/models/: __init__.py  link.py  page.py  template.py
backend/apps/profile_app/serializers/: __init__.py  link.py  page.py  template.py
backend/apps/profile_app/views/: __init__.py  link.py  page.py  template.py
backend/project/: settings.py  urls.py  version.py
docs/: DEPLOYMENT_GUIDE.md
web/: .env.example  .prettierrc  Dockerfile.dev  components.json  eslint.config.js  index.html  package.json  vite.config.ts
(+81 files in other folders)
